<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".HomeScreen$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/totalMatchesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/totalMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/totalMatches"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/totalMatchesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:text="@string/totalMatchesValue"
            android:fontFamily="@font/iceland"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchOverAllRatingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/totalMatchesLayout">
        <TextView
            android:id="@+id/matchOverAllRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/overallRating"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/matchOverAllRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:text="@string/matchOverAllRatingValue"
            android:fontFamily="@font/iceland"
            android:textSize="50dp"
            android:textColor="@android:color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchUserNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchOverAllRatingLayout">
        <TextView
            android:id="@+id/matchUserName"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/matchUserName"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchUserNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="113dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchUserNameValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchLanguageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchUserNameLayout">
        <TextView
            android:id="@+id/matchLanguage"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/matchLanguage"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchLanguageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchLanguageValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchAgeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchLanguageLayout">
        <TextView
            android:id="@+id/matchAge"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/matchAge"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchAgeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchAgeValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchAgeLayout">
        <TextView
            android:id="@+id/matchTime"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/matchTime"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchTimeValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/matchInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matchTimeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/iceland"
        android:text="@string/matchInfo"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/matchTeamPlayerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchInfo">
        <TextView
            android:id="@+id/matchTeamPlayer"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/teamPlayer"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchTeamPlayerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchTeamPlayerValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchCamperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchTeamPlayerLayout">
        <TextView
            android:id="@+id/matchCamper"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/camper"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchCamperValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchCamperValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/matchStrikerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/matchCamperLayout">
        <TextView
            android:id="@+id/matchStriker"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iceland"
            android:text="@string/striker"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/matchStrikerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="154dp"
            android:fontFamily="@font/iceland"
            android:inputType="textNoSuggestions"
            android:text="@string/matchStrikerValue"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnShowGamerID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/matchStrikerLayout"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/iceland"
        android:text="@string/showGamerID"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnShowGamerID"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnPreviousMatch"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/iceland"
            android:text="@string/previousMatch"
            android:textAppearance="@android:style/TextAppearance.Material.Button"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"/>

        <Button
            android:id="@+id/btnNextMatch"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/iceland"
            android:text="@string/nextMatch"
            android:textAppearance="@android:style/TextAppearance.Material.Button"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

</RelativeLayout>