<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".HomeScreen$PlaceholderFragment">


    <TextView
        android:id="@+id/ratePlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/iceland"
        android:text="@string/ratePlayerInfo"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/layoutGameOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_below="@id/ratePlayerInfo">

        <ImageView
            android:id="@+id/rateGameIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/game_logo1" />

        <TextView
            android:id="@+id/ratePlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/iceland"
            android:text="@string/ratePlayerName"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGameTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layoutGameOne">

        <ImageView
            android:id="@+id/rateGameIcon2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/game_logo2" />

        <TextView
            android:id="@+id/ratePlayerName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/iceland"
            android:text="@string/ratePlayerName2"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

    </LinearLayout>

</RelativeLayout>